--- a/app/src/App.css
+++ b/app/src/App.css
@@ -20,3 +20,31 @@
 .App-link {
   color: #09d3ac;
 }
+
+.header {
+  display: flex;
+  justify-content: center;
+  background: dodgerblue;
+  padding: 10px;
+}
+
+.title {
+  margin: 0 30px;
+  padding: 20px;
+}
+
+.link {
+  padding: 10px;
+  color: maroon;
+  font-size: 18px;
+  text-decoration: none;
+}
+
+.jokes {
+  list-style-type: none;
+}
+
+.joke {
+  margin: 10px 0;
+  text-align: left;
+}
